--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,16 @@
 spring.application.name=Todo_List
 
-server.port=9090
+server.port=8080
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# PostgreSQL connection using env variables
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
+# JPA & Hibernate
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
